<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.obrigada_eu.listadecompras.presentation.shop_item.ShopItemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_dark_gray_color"
        tools:context=".presentation.shop_item.ShopItemFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/text_selection_appearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            app:boxCornerRadiusTopStart="0dp"
            app:boxCornerRadiusTopEnd="0dp"
            app:expandedHintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/til_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:boxStrokeErrorColor="@color/orange_error_color"
            app:errorTextColor="@color/orange_error_color"
            app:errorIconTint="@color/orange_error_color"
            app:cursorErrorColor="@color/grayish"
            app:errorTextAppearance="@style/error_appearance"
            app:setErrorInputName="@{viewModel.errorInputName}"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:maxLength="80"
                android:inputType="textCapSentences"
                android:nextFocusDown="@+id/et_count"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_count"
            style="@style/text_selection_appearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            app:boxCornerRadiusTopStart="0dp"
            app:boxCornerRadiusTopEnd="0dp"
            app:expandedHintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/bottom_buttons"
            app:layout_constraintEnd_toStartOf="@+id/til_units"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_name"
            app:boxStrokeErrorColor="@color/orange_error_color"
            app:errorTextColor="@color/orange_error_color"
            app:errorIconTint="@color/orange_error_color"
            app:cursorErrorColor="@color/grayish"
            app:errorTextAppearance="@style/error_appearance"
            app:setErrorInputCount="@{viewModel.errorInputCount}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/count_hint"
                android:inputType="numberDecimal"
                android:maxLength="7"
                android:nextFocusDown="@+id/et_units"
                app:itemId="@{viewModel.shopItem.id}"
                app:setCountToEditText="@{viewModel.shopItem.count}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_units"
            style="@style/text_selection_appearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            app:boxCornerRadiusTopStart="0dp"
            app:boxCornerRadiusTopEnd="0dp"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/til_count"
            app:layout_constraintTop_toTopOf="@id/til_count"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/units_hint"
                android:inputType="text"
                android:maxLength="9"
                app:itemId="@{viewModel.shopItem.id}"
                app:setUnitsToEditText="@{viewModel.shopItem.units}" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/bottom_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">


            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="20dp"
                android:text="@string/save_btn"
                android:textStyle="bold"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>